Revert "modified gitignore"
This reverts commit 2af4e9def8fb318d95c49f91776cc3dc4f3ac34a.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 dart-sass
-
-/node_modules
-
-
-#ignore all files with the specified extension .json
-*.json
+scss/node_modules
+.stylelintrc.json
+package-lock.json
+package.json
