Revert "modif files on gitignore"
This reverts commit 0ad4bd9f1e59b462b3deb19457f28e3d8adabaf9.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-dart-sass
-scss/node_modules
-.stylelintrc.json
-package-lock.json
-package.json
+/dart-sass/
+/scss/node_modules
+/.stylelintrc.json
+/package-lock.json
+/package.json
