update .gitignore for include node module

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # ignore le dossier dart-sass
 /dart-sass
 
+# ignore le dossier node modules
+/node_modules
+
 #ignore tous les fichiers paramétrage Json
 *.json
-
-# ignore le dossier bootstrap
-*node_modules
